Refactored java extensions